// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlStatementFormItem renders SqlStatementFormItem component 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-form-item form-item-label-mb-16 css-1jlm9cy css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            title=""
          >
            <svg
              class="custom-icon-ellipse"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#E8F3FF"
                height="16"
                rx="3"
                width="16"
              />
              <circle
                cx="8"
                cy="8"
                fill="#fff"
                r="3"
                stroke="#4583FF"
                stroke-width="2"
              />
            </svg>
            <span>
              选择SQL语句上传方式
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            for="1_currentUploadType"
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
                style="margin-left: -6px; margin-right: -6px;"
              >
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      输入SQL语句
                    </span>
                    <div
                      class="active-icon-wrapper"
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传SQL文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传ZIP文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
    >
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="1_form_data"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="custom-monaco-editor css-baixa9"
                  height="400px"
                  id="1_form_data"
                  language="sql"
                  options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                  value="/* input your sql */"
                  width="100%"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      审 核
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          SQL美化
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle tooltips-default-icon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test SqlStatementFormItem renders SqlStatementFormItem component 2`] = `
<div>
  <form
    class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-form-item form-item-label-mb-16 css-1jlm9cy css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            title=""
          >
            <svg
              class="custom-icon-ellipse"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#E8F3FF"
                height="16"
                rx="3"
                width="16"
              />
              <circle
                cx="8"
                cy="8"
                fill="#fff"
                r="3"
                stroke="#4583FF"
                stroke-width="2"
              />
            </svg>
            <span>
              选择SQL语句上传方式
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            for="1_currentUploadType"
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
                style="margin-left: -6px; margin-right: -6px;"
              >
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      输入SQL语句
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传SQL文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传ZIP文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper lazy-load-wrapper-hidden css-952l0m"
    >
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class=""
              for="1_form_data"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="custom-monaco-editor css-baixa9"
                  height="400px"
                  id="1_form_data"
                  language="sql"
                  options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                  value="/* input your sql */"
                  width="100%"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
    >
      <div
        class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="1_zip_file"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-upload-wrapper css-1c6xfw5 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="css-dev-only-do-not-override-txh9fw ant-upload ant-upload-drag"
                  >
                    <span
                      class="ant-upload ant-upload-btn"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept=".zip"
                        aria-required="true"
                        id="1_zip_file"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="ant-upload-drag-container"
                      >
                        <svg
                          class="custom-icon"
                          height="40"
                          viewBox="0 0 40 40"
                          width="40"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m20 20.977 7.072 7.07-2.359 2.358-3.046-3.047v9.309h-3.334v-9.312l-3.046 3.05-2.359-2.358zm0-17.644a11.67 11.67 0 0 1 11.59 10.324 9.166 9.166 0 0 1-1.588 17.973v-3.357a5.836 5.836 0 0 0 4.934-6.701 5.83 5.83 0 0 0-6.788-4.815 8.332 8.332 0 1 0-16.295 0A5.834 5.834 0 0 0 9.7 28.223l.3.05v3.357a9.166 9.166 0 0 1-1.59-17.973A11.666 11.666 0 0 1 20 3.333"
                            fill="currentColor"
                          />
                        </svg>
                        <div
                          class="title"
                        >
                          点击选择zip文件或将文件拖拽到此区域
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="ant-upload-list ant-upload-list-text"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item has-label-tip form-item-label-mb-16 css-1jlm9cy css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            title=""
          >
            <div
              class="label-cont-custom"
            >
              <div>
                <span
                  class="custom-icon-ellipse css-u3jcp4"
                >
                  <svg
                    class="custom-icon-ellipse"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#E8F3FF"
                      height="16"
                      rx="3"
                      width="16"
                    />
                    <circle
                      cx="8"
                      cy="8"
                      fill="#fff"
                      r="3"
                      stroke="#4583FF"
                      stroke-width="2"
                    />
                  </svg>
                </span>
                <span>
                  选择上线模式
                </span>
              </div>
              <div
                class="tip-content-box"
              >
                当选择文件模式上线时，审核结果将以文件为单位进行聚合展示
              </div>
            </div>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            for="1_exec_mode"
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
                style="margin-left: -5px; margin-right: -5px;"
              >
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 5px; padding-right: 5px;"
                >
                  <div
                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      SQL模式
                    </span>
                    <div
                      class="active-icon-wrapper"
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-txh9fw"
                  style="padding-left: 5px; padding-right: 5px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      文件模式
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
        >
          <label
            class=""
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      审 核
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
